# echo

./: .dockerignore  .rubocop.yml  .travis.yml  Dockerfile  README.md  build.gradle  deploy_rsa.enc  detekt-config.yml  echo.environment.json.template  echo.json  go  go.helpers  renovate.json
.circleci/: config.yml
.github/: dependabot.yml
recho/: Cargo.toml
recho/src/: fish.rs  host.rs  main.rs
spec/: container_spec.rb  spec_helper.rb
src/main/kotlin/com/hceris/echo/: EchoApplication.kt  FishController.kt  HeadersController.kt  HelloController.kt  ListController.kt
src/main/kotlin/com/hceris/echo/com/hceris/echo/config/: ConverterConfiguration.kt  FishConfiguration.kt  SwaggerConfiguration.kt
src/main/kotlin/com/hceris/echo/fish/: Language.kt  Parser.kt  Utils.kt
src/main/kotlin/com/hceris/echo/fishes/: Language.kt  Parser.kt  Utils.kt
src/main/resources/: application.yml  fish.yaml  fishes.yaml
src/test/kotlin/com/hceris/echo/: EchoApplicationTests.kt  FishControllerTest.kt  HeadersControllerTest.kt  HelloControllerTest.kt  ListControllerTest.kt
src/test/kotlin/com/hceris/echo/fish/: ParserTest.kt
src/test/kotlin/com/hceris/echo/fishes/: ParserTest.kt
