[package]
name = "recho"
version = "0.1.0"
authors = ["Mario Fernandez <mario.fernandez@hceris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.112", features = ["derive"] }
clap = "2.33.1"
prettytable-rs = "0.8.0"
