[package]
name = "recho"
version = "0.1.0"
authors = ["Mario Fernandez <mario.fernandez@hceris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0.112", features = ["derive"] }
clap = { version = "2.33.1", features = ["color", "suggestions"] }
prettytable-rs = "0.8.0"
